forecast structure and get wheater data from api

--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,9 @@ body {
     letter-spacing: .5em;
 }
 
-.header-right span, span:after {
+.header-right span.header-text, span.header-text:after {
     font-weight: 900;
-    color: #efedce;
+    color: #f3f3ef;
     white-space: nowrap;
     letter-spacing: .1em;
 }
@@ -96,6 +96,7 @@ body {
 .menu li:hover>a {
     background: #ffffff;
     color: #3498db;
+    cursor: pointer;
 }
 
 /*forecast card*/
@@ -193,4 +194,63 @@ body {
     color: #667480;
     font-size: 16px;
     margin-bottom: 5px;
+}
+
+/*twelve days forecast*/
+.fourteen {
+    display: flex;
+}
+.fourteen .column {
+    width: 47px;
+    height: 220px;
+    border-right: 1px solid #e1e7eb;
+    border-bottom: 1px solid #e1e7eb;
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+}
+.day-box {
+    border-bottom: 1px solid #e1e7eb;
+}
+.day-box .date {
+    color: #1D3B55;
+    font-size: 15px;
+    padding-top: 3px;
+    font-weight: 900;
+}
+.day-box .day {
+    color: #788C97;
+    font-size: 11px;
+    padding-bottom: 2px;
+    text-transform: uppercase;
+}
+.day-icon>img {
+    width: 30px;
+    height: 30px;
+}
+
+.temp-default {
+    font-size: 15px;
+    color: #ffffff;
+    position: absolute;
+    margin: 0 10px;
+    background-repeat: no-repeat;
+    height: 36px;
+    padding-right: 2px;
+    font-weight: 900;
+    width: 30px;
+
+}
+.max-temperature {
+    margin-top: 18px;
+    padding-top: 3px;
+    background-image: url(../images/idokep_ikon_max_poi.svg);
+}
+
+.min-temperature {
+    margin-top: 85px;
+    padding-top: 7px;
+    background-image: url(../images/idokep_ikon_min_poi.svg);
+
 }
