--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,18 @@ body {
 
 .container {
     width: 100%;
+    height: 100%;
     background-image: url(../images/clouds.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
 }
 
 .wrap {
     margin: 0 auto;
     width: 65%;
     background: rgba(155, 155, 155, 0.6);
-    height: 100vh;
+    height: 100%;
 }
 /*Header*/
 .header-wrap {
@@ -107,6 +107,10 @@ body {
     margin: 10px 0;
     padding: 15px;
     display: inline-flex;
+}
+.forecast-card-inner-wrapper {
+    display: inline-flex;
+    margin: 0 auto;
 }
 
 /*left column*/
@@ -252,4 +256,11 @@ body {
     margin-top: 15px;
     color: #0a0ada;
     background-color: #2d45f38f;
+}
+
+/* Google map */
+#map {
+    margin: 15px auto;
+    width: 95%;
+    height: 300px;
 }
